# Scientific-Programming-in-Python-and-Fortran

1.intro/: Introduction_to_Python.ipynb
2.matrix compute/: Introduction_to_NumPy.ipynb
3.plotting/: Introduction_to_Matplotlib.ipynb
4.build in functions and IO/: Python_built_in_functions.ipynb  Visualisation_with_PyVTK.ipynb
5.object-oriented programming/: Object_oriented_programming_in_Python.ipynb
7.fortran/: Fortran_and_f2py.ipynb
exercise/: ex1.py  ex2.py  ex3.py  ex4.py  ex5-2.py  ex5_p47-1.pvsm  ex5_py48-1.pvsm  ex6_graph_plot_template.py  exercise link  faithful_max_4_5.csv  graph_plot.ui
exercise/ex7/fortran1/: CMakeLists.txt  main.f90
exercise/ex7/fortran2/: CMakeLists.txt  main.f90
exercise/ex7/fortran3/: CMakeLists.txt  main.f90
exercise/ex7/fortran6/: CMakeLists.txt  main.f90  my_mod.f90
exercise/ex7/fortran7/: CMakeLists.txt  main.f90
exercise/ex7/fortran8/: CMakeLists.txt  main.f90
exercise/final project/project_draft/: CMakeLists.txt.user.VfgOmE  README.md  clean.cmd  configure_build.sh  particle_player.py  particles_vedo.py  particles_vedo_viewer.py  run_fortran.cmd  run_python_vedo.sh  test.py  vedo_demo.py
exercise/final project/project_draft/src/particle-lib/: CMakeLists.txt  particle_driver.f90
exercise/final project/project_draft/src/particles/: CMakeLists.txt  main.f90
exercise/final project/project_skeleton/: CMakeLists.txt  build.cmd  build.sh  clean.sh  configure_build.cmd  particle_player.py  particles.py  particles_player_vedo.py  particles_vedo.py  run_fortran.sh  run_particles_player_vedo.cmd  run_python.cmd  (+5 more)
(+48 files in other folders)
